Returning linked platforms on get post call
