# docs/swagger.yaml
@@ -90,7 +90,7 @@ definitions:
       time_zone:
         type: string
     type: object
-  media.DownloadMediaData:
+  media.DownloadMetaData:
     properties:
       added_by:
         type: string
@@ -134,6 +134,13 @@ definitions:
     - MediaTypeVideo
     - MediaTypeShortVideo
     - MediaTypeDocument
+  post.Platform:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   post.Post:
     properties:
       created_at:
@@ -144,6 +151,35 @@ definitions:
         type: string
       is_idea:
         type: boolean
+      project_id:
+        type: string
+      scheduled_at:
+        type: string
+      status:
+        type: string
+      text_content:
+        type: string
+      title:
+        type: string
+      type:
+        $ref: '#/definitions/post.PostType'
+      updated_at:
+        type: string
+    type: object
+  post.PostResponse:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: string
+      id:
+        type: string
+      is_idea:
+        type: boolean
+      linked_platforms:
+        items:
+          $ref: '#/definitions/post.Platform'
+        type: array
       project_id:
         type: string
       scheduled_at:
@@ -317,7 +353,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/media.DownloadMediaData'
+            $ref: '#/definitions/media.DownloadMetaData'
         "400":
           description: Bad Request
           schema:
@@ -391,7 +427,56 @@ paths:
       summary: Get media file
       tags:
       - media
-  /media/{project_id}/link-to-post:
+  /media/{project_id}/{post_id}/{file_name}/meta:
+    get:
+      description: Get download metadata
+      parameters:
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Post ID
+        in: path
+        name: post_id
+        required: true
+        type: string
+      - description: File name
+        in: path
+        name: file_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/media.DownloadMetaData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.APIError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.APIError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.APIError'
+      summary: Get download metadata
+      tags:
+      - media
+  /media/{project_id}/link-to-platform:
     post:
       consumes:
       - application/json
@@ -562,7 +647,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/post.Post'
+            $ref: '#/definitions/post.PostResponse'
         "400":
           description: Validation error
           schema:
